--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -22,10 +22,9 @@ collections:
       - {label: "Excerpt", name: "excerpt", widget: "string"}
       - {label: "Body", name: "body", widget: "markdown"}
 
-collections:
   - name: "Reports" # Used in routes, e.g., /admin/collections/blog
-    label: "bulletin" # Used in the UI
-    folder: "src/pages/bulletin" # The path to the folder where the documents are stored
+    label: "reports" # Used in the UI
+    folder: "src/pages/reports" # The path to the folder where the documents are stored
     create: true # Allow users to create new documents in this collection
     slug: "{{slug}}" # Filename template, e.g., YYYY-MM-DD-title.md
     fields: # The fields for each document, usually in front matter
