--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   },
   "dependencies": {
     "@astrojs/tailwind": "^4.0.0",
+    "@tinacms/cli": "^1.5.30",
     "astro": "^2.10.14",
     "astro-icon": "^0.8.1",
-    "tailwindcss": "^3.3.3"
+    "tailwindcss": "^3.3.3",
+    "tinacms": "^1.5.21"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.9"
