--- a/package.json
+++ b/package.json
@@ -3,11 +3,8 @@
   "type": "module",
   "version": "0.0.1",
   "scripts": {
-    "dev": "astro dev",
-    "start": "astro dev",
-    "build": "astro build",
-    "preview": "astro preview",
-    "astro": "astro"
+     "dev": "astro dev",
+      "dev": "tinacms dev -c 'astro dev'"
   },
   "dependencies": {
     "@astrojs/tailwind": "^4.0.0",
